changed api from /getUserProfile to /profile
