# service/api/api-handler.go
@@ -16,7 +16,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.PUT("/users/:id/setMyUserName", rt.wrap(rt.setMyUserName))
 	rt.router.PUT("/users/:id/followUser/:id2", rt.wrap(rt.followUser))
 	rt.router.PUT("/users/:id/banUser/:id2", rt.wrap(rt.banUser))
-	rt.router.GET("/users/:id/getUserProfile", rt.wrap(rt.getUserProfile))
+	rt.router.GET("/users/:id/profile", rt.wrap(rt.getUserProfile))
 	rt.router.GET("/users/:id/getMyStream", rt.wrap(rt.getMyStream))
 	rt.router.GET("/users/:id/getLogo", rt.wrap(rt.getLogo))
 	rt.router.GET("/images/:id", rt.wrap(rt.getImage))
